[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-rl"
version = "0.2.0"
description = "A simple reinforcement learning framework for research and education"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Tiny RL Team", email = "tiny-rl@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]
keywords = ["reinforcement-learning", "rl", "gymnasium", "pytorch", "framework", "education", "research"]
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.28.0",
    "numpy>=1.26.0",
    "pygame>=2.5.0",
    "torch>=2.0.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
examples = [
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]
classic = [
    "ale-py>=0.8.0",
    "box2d-py>=2.3.5",
    "swig>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tiny-rl/tiny-rl"
Repository = "https://github.com/tiny-rl/tiny-rl"
Documentation = "https://github.com/tiny-rl/tiny-rl#readme"
"Bug Tracker" = "https://github.com/tiny-rl/tiny-rl/issues"

[project.scripts]
tiny-rl-train = "tiny_rl.cli:train_main"
tiny-rl-eval = "tiny_rl.cli:eval_main"
tiny-rl-demo = "tiny_rl.cli:demo_main"

[tool.hatch.build.targets.wheel]
packages = ["tiny_rl"]

[tool.hatch.build.targets.sdist]
include = [
    "/tiny_rl",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/examples",
]

# Linter tools #################################################################

[tool.codespell]
ignore-words = "docs/spelling_wordlist.txt"

[tool.ruff]
target-version = "py312"
line-length = 100
output-format = "full"
src = ["tiny_rl", "examples"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "PIE",     # flake8-pie
    "PYI",     # flake8-pyi
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TC",      # flake8-type-checking
    "PERF",    # perflint
    "FURB",    # refurb
    "TRY",     # tryceratops
    "RUF",     # ruff
    "ASYNC",   # flake8-async
]
ignore = [
    # E501: line too long
    # W505: doc line too long
    # too long docstring due to long example blocks
    "E501",
    "W505",
    "ANN002",
    "ANN003",
    "ANN204", # return type for special methods
    # ANN401: dynamically typed expressions (typing.Any) are disallowed
    "ANN401",
    "B027",  # empty method https://github.com/PyCQA/flake8-bugbear/issues/301
    "C416",  # unnecessary comprehensions
    "COM812",  # conflict with formatter
    "RUF005",
    # S101: use of `assert` detected
    # internal use and may never raise at runtime
    "S101",
    "S105",   # hardcoded password string
    "S107",   # hardcoded password default
    "S110",   # try-except-pass in tests - acceptable for test code
    # S311: random number generator not cryptographically secure
    # not a security-sensitive application
    "S301",  # pickle
    "S311",
    # SIM105: use `contextlib.suppress(...)` instead of try-except-pass
    # reduce unnecessary function call
    "SIM105",
    "TID252", # relative imports
    # TRY003: avoid specifying long messages outside the exception class
    # long messages are necessary for clarity
    "TRY003",
    "TRY400",
    "N802",   # naming
]
typing-modules = ["tiny_rl.typing"]
unfixable = ["S110"]
allowed-confusables = ["，", "。", "：", "？", "！", "、", "（", "）", "；", "“", "”"]
extend-safe-fixes = [
    "C408",
    "E711",
    "FURB129",
    "PERF102",
    "PIE810",
    "SIM102",
    "TC001",  # typing-only-first-party-import
    "TC002",  # typing-only-third-party-import
    "TC003",  # typing-only-standard-library-import
    "TC004",  # runtime-import-in-type-checking-block
    "TRY201",
    "UP004",  # useless-object-inheritance
    "UP008",  # super-call-with-parameters
    "UP038",  # non-pep604-isinstance
    "UP039",  # unnecessary-class-parentheses
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"examples/**/*.py" = [
    "TID252",  # relative-imports
]

"test/**/*.py" = [
    "ANN",
    "S108",
]

[tool.ruff.lint.isort]
known-first-party = ["tiny_rl"]
known-local-folder = ["tiny_rl", "examples", "tests"]
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
suppress-none-returning = true


[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
